--- a/src/assets/scss/global/_link.scss
+++ b/src/assets/scss/global/_link.scss
@@ -16,7 +16,7 @@
 	}
 }
 
-:is(h1, h2, h3, h4, h5, h6) > :is(a, .heading-anchor, .heading-link) {
+:is(h1, h2, h3, h4, h5, h6) :is(a, .heading-anchor, .heading-link) {
 	text-decoration: none;
 	color: inherit;
 
