--- a/src/assets/scss/utility/_typography.scss
+++ b/src/assets/scss/utility/_typography.scss
@@ -52,3 +52,10 @@
 .u-textAlign-right {
 	text-align: right;
 }
+
+.u-textWrap-balance {
+	text-wrap: balance;
+}
+.u-textWrap-pretty {
+	text-wrap: pretty;
+}
